prod_snapshot_2015-09-24_1030/objects/Order_Fulfillment__c.object
<CustomObject>
    <fields>
        <fullName>Run_Date__c</fullName>
        <label>Run Date</label>
        <picklist>
            <picklistValues>
                <fullName>8/29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9/26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10/31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11/25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12/26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2/27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6/26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8/28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9/25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10/30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11/24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12/24</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SEM_Geography_Type__c</fullName>
        <label>Geography Type</label>
        <picklist>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SEM_Geography__c</fullName>
        <label>Geography</label>
        <picklist>
            <controllingField>SEM_Geography_Type__c</controllingField>
            <picklistValues>
                <fullName>Ahwatukee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gilbert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glendale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mesa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scottsdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tempe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SEM_Keyword__c</fullName>
        <label>SEM Keyword</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main News</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday Home Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valley &amp; State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lifestyle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <description>Only applicable for those requiring HTML creative</description>
        <inlineHelpText>Only applicable for those requiring HTML creative</inlineHelpText>
        <label>Special Instructions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specific_Zip_s__c</fullName>
        <label>Specific Zip(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Must be at least 7 days after date of sale</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Week_10__c</fullName>
        <label>Start Week 10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Week_11__c</fullName>
        <label>Start Week 11</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Week_12__c</fullName>
        <label>Start Week 12</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <picklist>
            <picklistValues>
                <fullName>Review all error messages below to correct your data.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedding stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiropractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetic Surgeons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dentists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatologists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture Repair and Upholsterers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware and Garden stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home electronics and appliance stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home furnishings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Repair/Maintenance Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landscaping/Lawn Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawn &amp; Landscape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locksmiths/Security &amp; Alarm Dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health Professionals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ophthalmologists/Optometrists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopedic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Painting Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pest Control Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical/Occupational Therapists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plumbing Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Podiatrists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remodelers/Designers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roofing/Siding Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upholstery and Coverings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterinarians</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleges &amp; universities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religious organizations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Targeting_2__c</fullName>
        <label>Targeting</label>
        <picklist>
            <picklistValues>
                <fullName>Geo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Targeting__c</fullName>
        <label>Targeting</label>
        <picklist>
            <picklistValues>
                <fullName>Geo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Clicks__c</fullName>
        <label>Total # Clicks</label>
        <picklist>
            <controllingField>Campaign_Type__c</controllingField>
            <picklistValues>
                <fullName>100</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Traffic_Boost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Traffic Boost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valley_Values_1__c</fullName>
        <label>Valley Values 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valley_Values_2__c</fullName>
        <label>Valley Values 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valley_Values_3__c</fullName>
        <label>Valley Values 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waiting_on_Material__c</fullName>
        <label>Waiting on Materials?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Site__c</fullName>
        <label>Web Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Week_10_Zone__c</fullName>
        <label>Week 10 Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Zone 1/20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 6/17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 12/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clive/Waukee/West Des Moines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Johnston/Urbandale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ankeny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines East/North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sparks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excl Sparks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sparks &amp; Non-Sparks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Butler/Warren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East &amp; West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East &amp; B/W</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Week_11_Zone__c</fullName>
        <label>Week 11 Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Zone 1/20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 6/17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 12/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clive/Waukee/West Des Moines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Johnston/Urbandale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ankeny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines East/North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sparks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excl Sparks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sparks &amp; Non-Sparks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Butler/Warren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East &amp; West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East &amp; B/W</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Week_12_Zone__c</fullName>
        <label>Week 12 Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Zone 1/20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 6/17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 12/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clive/Waukee/West Des Moines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Johnston/Urbandale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ankeny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines East/North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sparks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excl Sparks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sparks &amp; Non-Sparks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Butler/Warren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East &amp; West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East &amp; B/W</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3_Page_Micro_Site_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3 Page Micro Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3_Page_Micro_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3 Page Micro Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X5_Page_Micro_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>5 Page Micro Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Order Fulfillment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OF-{0000000}</displayFormat>
        <label>Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Fulfillment</pluralLabel>
    <recordTypes>
        <fullName>Central_Iowa_Daily</fullName>
        <active>true</active>
        <label>Central Iowa Daily</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cincinnati</fullName>
        <active>true</active>
        <label>Cincinnati</label>
    </recordTypes>
    <recordTypes>
        <fullName>Community_Print</fullName>
        <active>true</active>
        <label>Community Print</label>
    </recordTypes>
    <recordTypes>
        <fullName>DesMoinesRegister_com</fullName>
        <active>true</active>
        <label>DesMoinesRegister.com</label>
    </recordTypes>
    <recordTypes>
        <fullName>Des_Moines_Community_Print</fullName>
        <active>true</active>
        <label>Des Moines Community Print</label>
    </recordTypes>
    <recordTypes>
        <fullName>Digital_Display</fullName>
        <active>true</active>
        <label>Digital Display</label>
    </recordTypes>
    <recordTypes>
        <fullName>Directory_Listing</fullName>
        <active>true</active>
        <label>Directory Listing</label>
    </recordTypes>
    <recordTypes>
        <fullName>E_mail_Blast</fullName>
        <active>true</active>
        <label>E-mail Blast</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fashion_Style</fullName>
        <active>true</active>
        <label>Fashion &amp; Style</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flyer</fullName>
        <active>true</active>
        <label>Flyer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Herald_ROP</fullName>
        <active>true</active>
        <label>Herald ROP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Homestyle_Magazine</fullName>
        <active>true</active>
        <label>Homestyle Magazine</label>
    </recordTypes>
    <recordTypes>
        <fullName>Indianapolis</fullName>
        <active>true</active>
        <label>Indianapolis</label>
    </recordTypes>
    <recordTypes>
        <fullName>Media_Traks</fullName>
        <active>true</active>
        <label>Media Traks</label>
    </recordTypes>
    <recordTypes>
        <fullName>ROP</fullName>
        <active>true</active>
        <label>ROP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reno_Gazzette_Journal</fullName>
        <active>true</active>
        <label>Reno Gazzette Journal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Search_Engine_Marketing</fullName>
        <active>true</active>
        <label>Search Engine Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Valley_Values</fullName>
        <active>true</active>
        <description>Valley Values OF</description>
        <label>Valley Values</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>